force-app/main/default/objects/Animal__c/fields/Dislikes__c.field-meta.xml
<CustomField>
    <fullName>Dislikes__c</fullName>
    <label>Dislikes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>