force-app/main/default/objects/Animal__c/fields/Is_Adopted__c.field-meta.xml
<CustomField>
    <fullName>Is_Adopted__c</fullName>
    <formula>Number_Of_Adoptions__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Adopted</label>
    <type>Checkbox</type>
</CustomField>