force-app/main/default/objects/Animal__c/fields/Number_Of_Adoptions__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Adoptions__c</fullName>
    <label>Number Of Adoptions</label>
    <summaryFilterItems>
        <field>Adoption__c.Status__c</field>
        <operation>equals</operation>
        <value>In progress, Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Adoption__c.Animal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>