force-app/main/default/objects/Animal__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <formula>IMAGE(Photo_URL__c, &quot;Animal Photo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo</label>
    <type>Text</type>
</CustomField>