force-app/main/default/objects/Animal__c/fields/Shelter__c.field-meta.xml
<CustomField>
    <fullName>Shelter__c</fullName>
    <label>Shelter</label>
    <referenceTo>Shelter__c</referenceTo>
    <relationshipLabel>Animals</relationshipLabel>
    <relationshipName>Animals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>