force-app/main/default/objects/Animal__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>KG</description>
    <label>Weight</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>