force-app/main/default/objects/Animal__c/recordTypes/Animal_RT.recordType-meta.xml
<RecordType>
    <fullName>Animal_RT</fullName>
    <active>true</active>
    <label>Animal RT</label>
</RecordType>